Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: defi-api-service
spec:
  selector:
    app: defi-api
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30001
